@@ -20,13 +20,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
-				<jvmArguments>-XX:+UseSerialGC</jvmArguments>
-					<jvmArguments>-XX:+UnlockExperimentalVMOptions</jvmArguments>
-					<jvmArguments>-XX:+UseCGroupMemoryLimitForHeap</jvmArguments>
-					<jvmArguments>-XX:MinHeapFreeRatio=20</jvmArguments>
-					<jvmArguments>-XX:MaxHeapFreeRatio=40</jvmArguments>
-					<jvmArguments>-XX:AdaptiveSizePolicyWeight=90</jvmArguments>
-					<jvmArguments>-XX:MaxRAMFraction=1</jvmArguments>
 					<systemPropertyVariables>
 						<environment>${env}</environment>
 					</systemPropertyVariables>
@@ -34,14 +27,12 @@
 						<additionalClasspathElement>${basedir}/target/classes
 						</additionalClasspathElement>
 					</additionalClasspathElements>
-					<parallel>classes</parallel>
-					<threadCount>8</threadCount>
-					<threadCountClasses>2</threadCountClasses>
-					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<!-- <argLine>-Xmx2048M -XX:MaxPermSize=2048M</argLine> -->
-
+					<parallel>all</parallel>
+					<threadCount>16</threadCount>
+					<perCoreThreadCount>false</perCoreThreadCount>
+					<forkCount>2.0C</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MinHeapFreeRatio=20 -XX:MaxHeapFreeRatio=40 -XX:AdaptiveSizePolicyWeight=90 -XX:MaxRAMFraction=1</argLine>
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
@@ -55,13 +46,6 @@
 				<version>3.0</version>
 				<configuration>
 					<target>1.8</target>
-					<jvmArguments>-XX:+UseSerialGC</jvmArguments>
-					<jvmArguments>-XX:+UnlockExperimentalVMOptions</jvmArguments>
-					<jvmArguments>-XX:+UseCGroupMemoryLimitForHeap</jvmArguments>
-					<jvmArguments>-XX:MinHeapFreeRatio=20</jvmArguments>
-					<jvmArguments>-XX:MaxHeapFreeRatio=40</jvmArguments>
-					<jvmArguments>-XX:AdaptiveSizePolicyWeight=90</jvmArguments>
-					<jvmArguments>-XX:MaxRAMFraction=1</jvmArguments>
 				</configuration>
 			</plugin>
 
